# image-service-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  logging.conf  pyproject.toml
src/: main.py
src/config/: logging.conf
src/images/endpoints/: endpoints.py  schemas.py
src/images/services/: images.py
src/shared/: database.py  logging.py  settings.py
src/shared/endpoints/: exceptions.py
src/tests/images/services/: test_images.py
src/tests/mocks/: mock_db_session.py  users.py
src/tests/users/services/: test_users.py
src/users/data/: mocks.py  models.py
src/users/endpoints/: endpoints.py  exceptions.py  schemas.py
src/users/services/: authentication.py  exceptions.py  schemas.py  users.py
